<resources>
    <string name="app_name">BURN</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BURN</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_steps">Steps</string>
    <string name="menu_report">Report</string>
    <string name="menu_hour">Hour</string>
    <string name="menu_day">Day</string>
    <string name="menu_map">Map</string>
    <string name="menu_profile">Profile</string>
    <string name="goal">Goal: 1000</string>
    <string name="_0">0</string>
    <string name="Calories">Calories</string>
    <string name="start">Start</string>
    <string name="toggle_stop">stop</string>
    <string name="toggle_start">start</string>
    <string name="step_permission_denied">permission denied</string>
    <string name="acc_not_available">ACC not available</string>
    <string name="step_not_available">step detector not available</string>
    <string name="delete_entries">Delete Entries</string>
    <string name="get_entries">Get Entries</string>
    <string name="completed_steps_today">Completed steps today:</string>
    <string name="today">Today</string>
    <string name="share">Share</string>
    <string name="hourly_report">Hourly report</string>
    <string name="daily_report">Daily report</string>
    <string name="img_folder">app_images</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mapbox_access_token">pk.eyJ1IjoibXdjYnVybiIsImEiOiJja2kxb2RxejgwNG94MnJudGFubnI0bmswIn0.XXaZeTB4HF53af1zTo2UdA</string>
    <string name="user_location_permission_explanation">Burn would like to use your location.</string>
    <string name="user_location_permission_not_granted">:(</string>
    <string name="startNavigation">Start Navigating</string>

    <string name="age_text">Age</string>
    <string name="weight_text">Weight(Kg)</string>
    <string name="height_text">Height(cm)</string>
    <string name="gender_text">Gender</string>
    <string name="cancel_text">Cancel</string>
    <string name="set_text">Set</string>
    <string name="male_text">Male</string>
    <string name="female_text">Female</string>
    <string name="others_text">Others</string>
    <string name="set_info">Set The Information</string>
    <string name="burned_calories">Calories Burned(last 30 days):</string>

    <string name="steps_text">STEPS</string>
    <string name="cal0_text">0 Calories</string>
</resources>


