<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:layout_margin="32dp"
    tools:context=".MainActivity" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="250dp"
        android:layout_height="450dp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/duration_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"

            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="1.0">

            <Button
                android:id="@+id/dialog_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/white_bg"
                android:text="@string/cancel_text"
                android:textColor="@color/colorGray"
                android:textSize="12sp"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_gravity="center|start"/>
            <Button
                android:id="@+id/dialog_set_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/white_bg"
                android:text="@string/set_text"
                android:textColor="@color/colorGray"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_gravity="center|start"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gender_text"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:gravity="start|center"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@drawable/white_bg">
                <TextView
                    android:id="@+id/male_tv_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/male_text"
                    android:textColor="@color/colorGray"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:padding="2dp"
                    android:layout_margin="3dp"/>

                <TextView
                android:id="@+id/female_tv_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/female_text"
                android:textColor="@color/colorGray"
                android:textStyle="bold"
                android:textSize="12sp"
                android:gravity="center"
                android:layout_gravity="center"
                android:padding="2dp"
                android:background="@drawable/line_gray_bg"
                android:layout_margin="3dp"/>

                <TextView
                    android:id="@+id/others_tv_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/others_text"
                    android:textColor="@color/colorGray"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:padding="2dp"
                    android:layout_margin="3dp"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/age_picker_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age_text"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_margin="5dp"/>
                <NumberPicker
                    android:id="@+id/age_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/weight_picker_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight_text"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_margin="5dp"/>
                <NumberPicker
                    android:id="@+id/weight_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/height_picker_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/height_text"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_margin="5dp"/>
                <NumberPicker
                    android:id="@+id/height_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"/>

            </LinearLayout>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>