<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="3"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:gravity="start|center"
                android:padding="2dp"
                android:text="@string/gender_text"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/prof_gender_tv_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_margin="3dp"
                android:layout_weight="2"
                android:gravity="start|center"
                android:padding="2dp"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="3"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:gravity="start|center"
                android:padding="2dp"
                android:text="@string/age_text"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/prof_age_tv_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_margin="3dp"
                android:layout_weight="2"
                android:gravity="start|center"
                android:padding="2dp"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="3"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:gravity="start|center"
                android:padding="2dp"
                android:text="@string/weight_text"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/prof_weight_tv_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_margin="3dp"
                android:layout_weight="2"
                android:gravity="start|center"
                android:padding="2dp"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="3"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:gravity="start|center"
                android:padding="2dp"
                android:text="@string/height_text"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/prof_height_tv_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_margin="3dp"
                android:layout_weight="2"
                android:gravity="start|center"
                android:padding="2dp"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/set_info_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/white_bg"
        android:padding="15dp"
        android:text="@string/set_info"
        android:textColor="@color/colorGray"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"/>

</androidx.constraintlayout.widget.ConstraintLayout>